# weather

./: .gitignore  README.md  app.cabal  weather-terminal.cabal
assets/: example.json  forecast-week.json
source/: Forecast.hs  ForecastHours.hs  Icons.hs  Main.hs  Table.hs  WeatherPoint.hs
src/: Forecast.hs  Main.hs  Sparkline.hs  Table.hs  TableFail1.hs  TimeSeries.hs
test/: AppTest.hs  Main.hs  SparklineTest.hs
