name:                app
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/jasonkuhrt/app#readme
license:             BSD3
license-file:        LICENSE
author:              Jason Kuhrt
maintainer:          jasonkuhrt@me.com
copyright:           ISC
category:            App
build-type:          Simple
cabal-version:       >=1.10

executable app
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Sparkline, Forecast, Icons
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, wreq, lens, lens-aeson, bytestring, text
