name:                weather-terminal
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/jasonkuhrt/app#readme
license:             BSD3
license-file:        LICENSE
author:              Jason Kuhrt
maintainer:          jasonkuhrt@me.com
copyright:           ISC
category:            App
build-type:          Simple
cabal-version:       >=1.10

executable weather-terminal
  hs-source-dirs:      source
  ghc-options:         -Wall -fwarn-tabs
  main-is:             Main.hs
  -- other-modules:       Sparkline, Forecast, Icons
  other-modules:       WeatherPoint, ForecastHours
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       wreq,
                       bytestring,
                       text,
                       directory,
                       containers,
                       aeson,
                       lens,
                       lens-aeson

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test, source
  other-modules: Sparkline, SparklineTest
  main-is: MainTest.hs
  build-depends:  base >= 4.7 && < 5,
                  hspec,
                  text
  default-language: Haskell2010
